Fixing nested accordion styling causing UI jumping

--- a/PluginManagerPlugin/styling.css
+++ b/PluginManagerPlugin/styling.css
@@ -1,25 +1,25 @@
 .ui-accordion-content {
     height: inherit !important;
     background-color: white;
-    border: 2px solid #C3E8F4;
+    border: 2px solid #C3E8F4 !important;
     padding-left: 10px !important;
     padding-right: 10px !important;
 }
 
 .ui-accordion-header {
     background-color: #EBEBEB;
-    border: 2px solid #EBEBEB;
+    border: 2px solid #EBEBEB !important;
     outline: none;
 }
 
 .ui-accordion-header:hover {
     background-color: #EBEBEB;
-    border: 2px solid #C3E8F4;
+    border: 2px solid #C3E8F4 !important;
 }
 
 .ui-accordion-header.ui-state-active {
     background-color: #A4DAEC;
-    border: 2px solid #A4DAEC;
+    border: 2px solid #A4DAEC !important;
     outline: none;
 
 }
